--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+log = { version = "^0.4.14", features = ["max_level_trace", "release_max_level_trace"] }
 tokio = { version = "^1", features = ["fs", "net", "rt-multi-thread", "sync", "time"] }
 tokio-stream = { version = "^0.1.8", features = ["sync"] }
 
@@ -15,7 +16,12 @@ egui = "0.19.0"
 env_logger = "^0.9.0"
 eframe = "0.19.0"
 futures-util = "^0.3.21"
+once_cell = "^1.9.0"
+serde = "^1.0.125"
+serde_derive = "^1.0.125"
+serde_json = "^1.0.68"
 tokio-native-tls = "^0.3.0"
+whoami = "1.2.1"
 
 [profile.release]
 lto = 'thin'
