--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,11 @@ tokio-stream = { version = "^0.1.8", features = ["sync"] }
 
 anyhow = "1.0.65"
 chrono = "^0.4.19"
+crossbeam-channel = "0.5.6"
 egui = "0.19.0"
 env_logger = "^0.9.0"
 eframe = "0.19.0"
+flume = "0.10.14"
 futures-util = "^0.3.21"
 once_cell = "^1.9.0"
 serde = "^1.0.125"
