--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,9 @@ tokio-stream = { version = "^0.1.8", features = ["sync"] }
 
 anyhow = "1.0.65"
 chrono = "^0.4.19"
-crossbeam-channel = "0.5.6"
+dashmap = "5.4.0"
 egui = "0.19.0"
+egui_dock = "0.2.1"
 env_logger = "^0.9.0"
 eframe = "0.19.0"
 flume = "0.10.14"
