--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-iced = { version = "^0.5.2", features = ["debug", "tokio"] }
+iced = { version = "0.5.2", features = ["debug", "tokio"] }
 log = { version = "^0.4.14", features = ["max_level_trace", "release_max_level_trace"] }
 tokio = { version = "^1", features = ["fs", "net", "rt-multi-thread", "sync", "time", "io-util"] }
 tokio-stream = { version = "^0.1.8", features = ["sync"] }
@@ -17,6 +17,7 @@ dashmap = "5.4.0"
 env_logger = "0.10.0"
 flume = "0.10.14"
 futures-util = "^0.3.21"
+iced_native = "0.6.1"
 once_cell = "^1.9.0"
 serde = "^1.0.125"
 serde_derive = "^1.0.125"
